# Changelog

Notable changes to the Dungeon Roguelike Game will be documented here.
The formatting is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/)

## [unreleased]

- Switch --nummon for determining the number of monsters in the dungeon,
  defaulted to 10

### Changed

- Better error checking for switches and load/save functions

## [3.1.0] - 2025-2-26

### Added

- Separate header files for each C file, excluding main, in a complete
  refactor of the header file setup, in order to manage dependencies

### Changed

- Updated .gitignore
- Updated Makefile

## [3.0.2] - 2025-2-24

### Removed

- README section from assignment 2

## [3.0.1] - 2025-2-24

### Changed

- README is now properly updated to match specifications for assignment 3

## [3.0.0] - 2025-2-24

### Added

- Distances for tunneling and non tunneling monsters are now calculated
  for generated and loaded dungeons, which are stored in the array of
  Tiles for the dungeon
- Distances for both tunneling and non tunneling monsters are now
  printed after the initial printing of the dungeon
- Fibonacci heap nodes now keep track of their position, for
  implementation of Dijkstra's algorithm
- Proper destruction of a Fibonacci heap along with all of its nodes is
  now possible

### Changed

- Inserting nodes now returns that node for Fibonacci heaps, for easier
  implementation
- Makefile has been updated to include the Fibonacci heap and path
  finding files

### Fixed

- Printing for tunneling distances now displays the character location
  and is not on one line, as intended

## [2.1.0] - 2025-2-21

### Added

- Fibonacci heap implementation (from scratch) supporting insert, getMin,
  extractMin, and decrease key, for use in Dijkstra's algorithm
- Printing for the tunneling and non tunneling distance from the PC for later
  use in displaying Dijkstra's algorithm results
- Stubs for generating distance in dungeonGeneration and printing them in
  main for future implementation purposes